fixed bug with center aligned text

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,4 +1,4 @@
-header {
+.blog__header {
     color: var(--color-xanadu-green);
     text-align: center;
 }
